--- a/Module2/pom.xml
+++ b/Module2/pom.xml
@@ -46,6 +46,11 @@
 			<artifactId>javax.inject</artifactId>
 			<version>1</version>
 		</dependency>
+		<dependency>
+			<groupId>cglib</groupId>
+			<artifactId>cglib</artifactId>
+			<version>2.2</version>
+		</dependency>
 	</dependencies>
 
 	<build>
